Adding pagination and fixing get methods